<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment"
    android:id="@+id/main_layout"
    android:background="#010101">

    <TextView android:text="@string/choose_stats"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choose_stats"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textColor="#c33d2b"
        android:textSize="35sp"
        android:fontFamily="Georgia"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance_classes"
        android:id="@+id/balance_class_checkBox"
        android:layout_below="@+id/choose_stats"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textColor="#7D7D7D"
        android:textSize="25sp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance_roles"
        android:id="@+id/balance_roles_checkBox"
        android:layout_below="@+id/balance_class_checkBox"
        android:layout_alignParentStart="true"
        android:layout_marginTop="3dp"
        android:textColor="#7D7D7D"
        android:textSize="25sp"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_stuns"
        android:id="@+id/have_stuns_checkBox"
        android:layout_below="@+id/balance_roles_checkBox"
        android:layout_alignParentStart="true"
        android:layout_marginTop="3dp"
        android:textColor="#7D7D7D"
        android:textSize="25sp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/generate"
        android:id="@+id/button"
        android:layout_below="@+id/have_stuns_checkBox"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="20dp" />
</RelativeLayout>
